<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:scrollbars="0x0" android:layout_width="-1" android:layout_height="-2"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="1" android:id="@id/layout" android:layout_width="-1" android:layout_height="-2">
        <TextView android:layout_width="-1" android:layout_height="-2" android:text="@string/scroll_view_1_text_1" android:contentDescription="@string/scroll_view_1_text_1" />
        <Button android:layout_width="-1" android:layout_height="-2" android:text="@string/scroll_view_1_button_1" android:contentDescription="@string/scroll_view_1_button_1" />
        <TextView android:layout_width="-1" android:layout_height="-2" android:text="@string/scroll_view_1_text_2" android:contentDescription="@string/scroll_view_1_text_2" />
        <Button android:layout_width="-1" android:layout_height="-2" android:text="@string/scroll_view_1_button_2" android:contentDescription="@string/scroll_view_1_button_2" />
        <TextView android:layout_width="-1" android:layout_height="-2" android:text="@string/scroll_view_1_text_3" android:contentDescription="@string/scroll_view_1_text_3" />
        <Button android:layout_width="-1" android:layout_height="-2" android:text="@string/scroll_view_1_button_3" android:contentDescription="@string/scroll_view_1_button_3" />
        <TextView android:layout_width="-1" android:layout_height="-2" android:text="@string/scroll_view_1_text_4" android:contentDescription="@string/scroll_view_1_text_4" />
        <Button android:layout_width="-1" android:layout_height="-2" android:text="@string/scroll_view_1_button_4" android:contentDescription="@string/scroll_view_1_button_4" />
        <TextView android:layout_width="-1" android:layout_height="-2" android:text="@string/scroll_view_1_text_5" android:contentDescription="@string/scroll_view_1_text_5" />
        <Button android:layout_width="-1" android:layout_height="-2" android:text="@string/scroll_view_1_button_5" android:contentDescription="@string/scroll_view_1_button_5" />
        <TextView android:layout_width="-1" android:layout_height="-2" android:text="@string/scroll_view_1_text_6" android:contentDescription="@string/scroll_view_1_text_6" />
        <Button android:layout_width="-1" android:layout_height="-2" android:text="@string/scroll_view_1_button_6" android:contentDescription="@string/scroll_view_1_button_6" />
    </LinearLayout>
</ScrollView>
