<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:progress_small="@null" android:id="@id/action_search" android:title="@string/action_bar_search" android:showAsAction="0x1" android:actionViewClass="android.widget.SearchView" />
    <item android:progress_small="@null" android:id="@id/action_add" android:title="@string/action_bar_add" />
    <item android:progress_small="@null" android:id="@id/action_edit" android:title="@string/action_bar_edit" android:showAsAction="0x2" />
    <item android:progress_small="@null" android:id="@id/action_share" android:title="@string/action_bar_share" android:showAsAction="0x1" />
    <item android:progress_small="@null" android:id="@id/action_sort" android:title="@string/action_bar_sort" android:showAsAction="0x1">
        <menu>
            <item android:progress_small="@null" android:id="@id/action_sort_size" android:title="@string/action_bar_sort_size" android:onClick="onSort" />
            <item android:progress_small="@null" android:id="@id/action_sort_alpha" android:title="@string/action_bar_sort_alpha" android:onClick="onSort" />
        </menu>
    </item>
</menu>
