<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="-1" android:layout_height="-1"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="1" android:layout_width="-1" android:layout_height="-1">
        <TableLayout android:id="@id/menu" android:layout_width="-1" android:layout_height="-2">
            <TableRow>
                <TextView android:padding="3.0dp" android:text="@string/table_layout_9_open" android:contentDescription="@string/table_layout_9_open" />
                <TextView android:gravity="0x5" android:padding="3.0dp" android:text="@string/table_layout_9_open_shortcut" android:contentDescription="@string/table_layout_9_open_shortcut" />
            </TableRow>
            <TableRow>
                <TextView android:padding="3.0dp" android:text="@string/table_layout_9_save" android:contentDescription="@string/table_layout_9_save" />
                <TextView android:gravity="0x5" android:padding="3.0dp" android:text="@string/table_layout_9_save_shortcut" android:contentDescription="@string/table_layout_9_save_shortcut" />
            </TableRow>
            <TableRow>
                <TextView android:padding="3.0dp" android:text="@string/table_layout_9_save_as" android:contentDescription="@string/table_layout_9_save_as" />
                <TextView android:gravity="0x5" android:padding="3.0dp" android:text="@string/table_layout_9_save_as_shortcut" android:contentDescription="@string/table_layout_9_save_as_shortcut" />
            </TableRow>
            <TableRow>
                <TextView android:padding="3.0dp" android:text="@string/table_layout_9_save_all" android:contentDescription="@string/table_layout_9_save_all" />
                <TextView android:gravity="0x5" android:padding="3.0dp" android:text="@string/table_layout_9_save_all_shortcut" android:contentDescription="@string/table_layout_9_save_all_shortcut" />
            </TableRow>
            <TableRow>
                <TextView android:padding="3.0dp" android:text="@string/table_layout_9_import" android:contentDescription="@string/table_layout_9_import" />
            </TableRow>
            <TableRow>
                <TextView android:padding="3.0dp" android:text="@string/table_layout_9_export" android:contentDescription="@string/table_layout_9_export" />
                <TextView android:gravity="0x5" android:padding="3.0dp" android:text="@string/table_layout_9_export_shortcut" android:contentDescription="@string/table_layout_9_export_shortcut" />
            </TableRow>
        </TableLayout>
        <Button android:id="@id/toggle" android:layout_width="-2" android:layout_height="-2" android:text="@string/table_layout_9_toggle_shrink" android:contentDescription="@string/table_layout_9_toggle_shrink" />
    </LinearLayout>
</ScrollView>
