<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="1" android:layout_width="-1" android:layout_height="-1"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TableLayout android:id="@id/menu" android:layout_width="-1" android:layout_height="-2">
        <TableRow>
            <TextView android:padding="3.0dp" android:layout_column="1" android:text="@string/table_layout_8_open" android:contentDescription="@string/table_layout_8_open" />
            <TextView android:gravity="0x5" android:padding="3.0dp" android:text="@string/table_layout_8_open_shortcut" android:contentDescription="@string/table_layout_8_open_shortcut" />
        </TableRow>
        <TableRow>
            <TextView android:padding="3.0dp" android:layout_column="1" android:text="@string/table_layout_8_save" android:contentDescription="@string/table_layout_8_save" />
            <TextView android:gravity="0x5" android:padding="3.0dp" android:text="@string/table_layout_8_save_shortcut" android:contentDescription="@string/table_layout_8_save_shortcut" />
        </TableRow>
        <TableRow>
            <TextView android:padding="3.0dp" android:layout_column="1" android:text="@string/table_layout_8_save_as" android:contentDescription="@string/table_layout_8_save_as" />
            <TextView android:gravity="0x5" android:padding="3.0dp" android:text="@string/table_layout_8_save_as_shortcut" android:contentDescription="@string/table_layout_8_save_as_shortcut" />
        </TableRow>
        <TableRow>
            <TextView android:padding="3.0dp" android:text="@string/table_layout_8_x" android:contentDescription="@string/table_layout_8_x" />
            <TextView android:padding="3.0dp" android:text="@string/table_layout_8_import" android:contentDescription="@string/table_layout_8_import" />
        </TableRow>
        <TableRow>
            <TextView android:padding="3.0dp" android:text="@string/table_layout_8_x" android:contentDescription="@string/table_layout_8_x" />
            <TextView android:padding="3.0dp" android:text="@string/table_layout_8_export" android:contentDescription="@string/table_layout_8_export" />
            <TextView android:gravity="0x5" android:padding="3.0dp" android:text="@string/table_layout_8_export_shortcut" android:contentDescription="@string/table_layout_8_export_shortcut" />
        </TableRow>
    </TableLayout>
    <Button android:id="@id/toggle" android:layout_width="-2" android:layout_height="-2" android:text="@string/table_layout_8_toggle_stretch" android:contentDescription="@string/table_layout_8_toggle_stretch" />
</LinearLayout>
