<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="1" android:layout_width="-1" android:layout_height="-1"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TableLayout android:id="@id/menu" android:layout_width="-1" android:layout_height="-2" android:stretchColumns="1" android:collapseColumns="2">
        <TableRow>
            <TextView android:padding="3.0dp" android:layout_column="1" android:text="@string/table_layout_7_open" android:contentDescription="@string/table_layout_7_open" />
            <TextView android:gravity="0x5" android:padding="3.0dp" android:text="@string/table_layout_7_open_shortcut" android:contentDescription="@string/table_layout_7_open_shortcut" />
        </TableRow>
        <TableRow>
            <TextView android:padding="3.0dp" android:layout_column="1" android:text="@string/table_layout_7_save" android:contentDescription="@string/table_layout_7_save" />
            <TextView android:gravity="0x5" android:padding="3.0dp" android:text="@string/table_layout_7_save_shortcut" android:contentDescription="@string/table_layout_7_save_shortcut" />
        </TableRow>
        <TableRow>
            <TextView android:padding="3.0dp" android:layout_column="1" android:text="@string/table_layout_7_save_as" android:contentDescription="@string/table_layout_7_save_as" />
            <TextView android:gravity="0x5" android:padding="3.0dp" android:text="@string/table_layout_7_save_as_shortcut" android:contentDescription="@string/table_layout_7_save_as_shortcut" />
        </TableRow>
        <View android:background="#ff909090" android:layout_height="2.0dp" />
        <TableRow>
            <TextView android:padding="3.0dp" android:text="@string/table_layout_7_x" android:contentDescription="@string/table_layout_7_x" />
            <TextView android:padding="3.0dp" android:text="@string/table_layout_7_import" android:contentDescription="@string/table_layout_7_import" />
        </TableRow>
        <TableRow>
            <TextView android:padding="3.0dp" android:text="@string/table_layout_7_x" android:contentDescription="@string/table_layout_7_x" />
            <TextView android:padding="3.0dp" android:text="@string/table_layout_7_export" android:contentDescription="@string/table_layout_7_export" />
            <TextView android:gravity="0x5" android:padding="3.0dp" android:text="@string/table_layout_7_export_shortcut" android:contentDescription="@string/table_layout_7_export_shortcut" />
        </TableRow>
        <View android:background="#ff909090" android:layout_height="2.0dp" />
    </TableLayout>
    <LinearLayout android:layout_width="-2" android:layout_height="-2">
        <Button android:id="@id/toggle2" android:layout_width="-2" android:layout_height="-2" android:text="@string/table_layout_7_toggle_checkmarks" android:contentDescription="@string/table_layout_7_toggle_checkmarks" />
        <Button android:id="@id/toggle1" android:layout_width="-2" android:layout_height="-2" android:text="@string/table_layout_7_toggle_shortcuts" android:contentDescription="@string/table_layout_7_toggle_shortcuts" />
    </LinearLayout>
</LinearLayout>
