<?xml version="1.0" encoding="utf-8"?>
<TableLayout android:layout_width="-1" android:layout_height="-2" android:stretchColumns="1"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TableRow>
        <TextView android:padding="3.0dp" android:layout_column="1" android:text="@string/table_layout_7_open" android:contentDescription="@string/table_layout_7_open" />
        <TextView android:gravity="0x5" android:padding="3.0dp" android:text="@string/table_layout_7_open_shortcut" android:contentDescription="@string/table_layout_7_open_shortcut" />
    </TableRow>
    <TableRow>
        <TextView android:background="#ff00ff00" android:padding="3.0dp" android:layout_column="1" android:text="@string/table_layout_7_save" android:contentDescription="@string/table_layout_7_save" />
        <TextView android:gravity="0x5" android:padding="3.0dp" android:text="@string/table_layout_7_save_shortcut" android:contentDescription="@string/table_layout_7_save_shortcut" />
    </TableRow>
    <TableRow>
        <TextView android:layout_gravity="0x1" android:background="#ffff0000" android:padding="3.0dp" android:layout_column="1" android:text="@string/table_layout_7_save_as" android:contentDescription="@string/table_layout_7_save_as" />
        <TextView android:gravity="0x5" android:background="#ffff00ff" android:padding="3.0dp" android:text="@string/table_layout_7_save_as_shortcut" android:contentDescription="@string/table_layout_7_save_as_shortcut" />
    </TableRow>
    <View android:background="#ff909090" android:layout_height="2.0dp" />
    <TableRow>
        <TextView android:padding="3.0dp" android:text="@string/table_layout_7_x" android:contentDescription="@string/table_layout_7_x" />
        <TextView android:padding="3.0dp" android:text="@string/table_layout_7_import" android:contentDescription="@string/table_layout_7_import" />
    </TableRow>
    <TableRow>
        <View android:background="#ff909090" android:layout_height="68.0dp" />
        <TextView android:layout_gravity="0x55" android:background="#ffff0000" android:padding="3.0dp" android:text="@string/table_layout_7_export" android:contentDescription="@string/table_layout_7_export" />
        <TextView android:gravity="0x5" android:background="#ff00ffff" android:padding="3.0dp" android:text="@string/table_layout_7_export_shortcut" android:contentDescription="@string/table_layout_7_export_shortcut" />
    </TableRow>
    <View android:background="#ff909090" android:layout_height="2.0dp" />
</TableLayout>
