<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="1" android:layout_width="-1" android:layout_height="-1"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:id="@id/toggle_home_as_up" android:layout_width="-2" android:layout_height="-2" android:text="@string/toggle_home_as_up" android:contentDescription="@string/toggle_home_as_up" />
    <Button android:id="@id/toggle_show_home" android:layout_width="-2" android:layout_height="-2" android:text="@string/toggle_show_home" android:contentDescription="@string/toggle_show_home" />
    <Button android:id="@id/toggle_use_logo" android:layout_width="-2" android:layout_height="-2" android:text="@string/toggle_use_logo" android:contentDescription="@string/toggle_use_logo" />
    <Button android:id="@id/toggle_show_title" android:layout_width="-2" android:layout_height="-2" android:text="@string/toggle_show_title" android:contentDescription="@string/toggle_show_title" />
    <Button android:id="@id/toggle_show_custom" android:layout_width="-2" android:layout_height="-2" android:text="@string/toggle_show_custom" android:contentDescription="@string/toggle_show_custom" />
    <Button android:id="@id/toggle_navigation" android:layout_width="-2" android:layout_height="-2" android:text="@string/toggle_navigation" android:contentDescription="@string/toggle_navigation" />
    <Button android:id="@id/cycle_custom_gravity" android:layout_width="-2" android:layout_height="-2" android:text="@string/cycle_custom_gravity" android:contentDescription="@string/cycle_custom_gravity" />
</LinearLayout>
