<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="1" android:layout_width="-1" android:layout_height="-1"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RadioGroup android:orientation="1" android:id="@id/menu" android:layout_width="-1" android:layout_height="-2" android:checkedButton="@id/lunch">
        <RadioButton android:id="@id/breakfast" android:text="@string/radio_group_1_breakfast" android:contentDescription="@string/radio_group_1_breakfast" />
        <RadioButton android:id="@id/lunch" android:text="@string/radio_group_1_lunch" android:contentDescription="@string/radio_group_1_lunch" />
        <RadioButton android:id="@id/dinner" android:text="@string/radio_group_1_dinner" android:contentDescription="@string/radio_group_1_dinner" />
        <RadioButton android:id="@id/all" android:text="@string/radio_group_1_all" android:contentDescription="@string/radio_group_1_all" />
        <TextView android:id="@id/choice" android:text="@string/radio_group_1_selection" android:contentDescription="@string/radio_group_1_selection" />
    </RadioGroup>
    <Button android:id="@id/clear" android:layout_width="-2" android:layout_height="-2" android:text="@string/radio_group_1_clear" android:contentDescription="@string/radio_group_1_clear" />
</LinearLayout>
